--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,12 +17,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/Favicon/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/Favicon/site.webmanifest" />
 
-    <meta name="image" content="%PUBLIC_URL%/spotify-app-preview.png" />
+    <meta name="image" content="https://spotification.herokuapp.com/spotify-app-preview.png" />
     <meta property="spotify-app-preview:title" content="Spotify Profile">
     <meta property="spotify-app-preview:description" content="Web app for visualizing personalized Spotify data">
-    <meta property="spotify-app-preview:image" content="%PUBLIC_URL%/spotify-app-preview.png">
+    <meta property="spotify-app-preview:image" content="https://spotification.herokuapp.com/spotify-app-preview.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="%PUBLIC_URL%/spotify-app-preview.png">
+    <meta name="twitter:image" content="https://spotification.herokuapp.com/spotify-app-preview.png">
     <meta name="twitter:creator" content="@bchiang7">
     <meta name="twitter:title" content="Spotify Profile">
     <meta name="twitter:description" content="Web app for visualizing personalized Spotify data">
