Change tab title to 'Spotification'

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Spotify Profile">
     <meta name="twitter:description" content="Web app for visualizing personalized Spotify data">
 
-    <title>Spotify Profile</title>
+    <title>Spotification</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
