Update Config Files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1DB954" />
     <meta
-      name="description"
+      name="Spotification"
       content="Web app for visualizing personalized Spotify data."
     />
     
@@ -29,7 +29,7 @@
 
     <title>Spotification</title>
   </head>
-  <body>
+  <body> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
