Change theme-color meta tag to work for firefox

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/Favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1DB954" />
-    <meta
-      name="Spotification"
-      content="Web app for visualizing personalized Spotify data."
-    />
+    <meta name="description" content="Web app for visualizing personalized Spotify data."/>
+
+    <meta name="title" property="og:title" content="Spotification">
+    <meta property="og:type" content="Website">
+    <meta name="image" property="og:image" content="https://spotification.herokuapp.com/spotify-app-preview.png">
+    <meta name="description" property="og:description" content="Web app for visualizing personalized Spotify data.">
+    <meta name="author" content="Quentin Lambkin">
     
     <link rel="android-chrome-192x192" sizes="192x192" href="%PUBLIC_URL%/Favicon/android-chrome-192x192.png" />
     <link rel="android-chrome-512x512" sizes="512x512" href="%PUBLIC_URL%/Favicon/android-chrome-512x512.png" />
